# jiujitsu-hub

./: README.md  package.json  turbo.json
apps/middleware/: .firebaserc  firebase.json  package.json
apps/middleware/functions/: package.json  tsconfig.json
apps/middleware/functions/src/: index.ts  server.ts
apps/mobile/: package.json
apps/web/: package.json
apps/web/assets/: useTheme.ts
apps/web/components/: FRow.tsx
apps/web/pages/: index.tsx
apps/web/pages/login/: Login.tsx
apps/web/pages/record/: Record.tsx  index.tsx
server/: .env  .gitignore  Cargo.toml
server/src/: main.rs
server/src/api/: match_record.rs  match_record_request.rs  mod.rs  task.rs
server/src/constants/: constants.rs
server/src/model/: match_record.rs  mod.rs
web/: package.json
web/assets/: useCustomTheme.ts
web/components/: FButton.tsx  FInput.tsx  FLabel.tsx  FRadio.tsx  FRow.tsx  FTable.tsx  NavigationSidebar.tsx
web/components/dialogs/: DeleteMatchRecordDialog.tsx  EditMatchRecordDialog.tsx  FDialog.tsx
web/domain/: MatchRecord.ts  MatchRecord.tsx  Time.tsx
web/middleware/: CustomFetch.ts  useMatchRecordApi.tsx
web/pages/: _app.tsx  index.tsx
web/pages/add_record/: AddRecord.tsx  index.tsx
web/pages/login/: Login.tsx  index.tsx
web/pages/messages/: index.tsx
web/pages/record/: Record.tsx
web/pages/show_records/: ShowRecords.tsx  index.tsx  show_records.tsx
web/state/: modalsStore.ts  store.ts
web/styles/: globals.css
