[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = {version= "^1.2.1", features = ["serde", "v4"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
env_logger = "0.9.1"
log = "0.4"
strum_macros= "^0.24"
strum= {version="^0.24", features=["derive"]}
derive_more = "^0.99"
redis = {version="^0.22", features=["json"]}
dotenv="0.15.0"
actix-cors = "0.6.3"